--- a/xbee-pack.yaml
+++ b/xbee-pack.yaml
@@ -1,19 +1,40 @@
 schema-version: 1.0
 
+type: builder
+
 description: |
   The Expect package contains tools for automating, via scripted dialogues, interactive applications such as telnet, ftp, passwd, fsck, rlogin, and tip. 
   Expect is also useful for testing these same applications as well as easing all sorts of tasks that are prohibitively difficult with anything else. The DejaGnu framework is written in Expect.
+
+  Installed program: expect
+  Installed library: libexpect-5.45.so
+  Short Descriptions
+    expect: Communicates with other interactive programs according to a script
+    libexpect-5.45.so: Contains functions that allow Expect to be used as a Tcl extension or to be used directly from C or C++ (without Tcl)
 
 
 builder: ./expect-builder
 
 dependency: tcl
 
-var:
+in:
   version: 5.45.4
 
 
 provision:
-  - copy:
-      builder: expect
-      todir: /
+  - url:
+      from: https://prdownloads.sourceforge.net/expect/expect{% version %}.tar.gz
+      todir: "{% xbeeSrc %}"
+      wget: true
+  - folder: "{% xbeeOut %}/usr/lib/x86_64-linux-gnu"
+
+build:
+  - shell:
+      cmds:
+        - ./configure --prefix=/usr --with-tcl=/usr/lib --enable-shared --mandir=/usr/share/man --with-tclinclude=/usr/include
+        - make
+        - make install DESTDIR={% xbeeOut %}
+        - cp expect {% xbeeOut %}/usr/bin
+        - cp libexpect{% version %}.so {% xbeeOut %}/usr/lib/x86_64-linux-gnu
+      directory: "{% xbeeSrc %}/expect{% version %}"
+  - export: "{% xbeeOut %}"
