--- a/xbee-pack.yaml
+++ b/xbee-pack.yaml
@@ -10,7 +10,7 @@ description: |
     expect: Communicates with other interactive programs according to a script
     libexpect-5.45.so: Contains functions that allow Expect to be used as a Tcl extension or to be used directly from C or C++ (without Tcl)
 
-dependencies:
+builders:
   - ./builder
   - tcl
 
